els-ASAP auto commit file/tag setroubleshoot-plugins-3.0.66-2.1.el7.src.rpm

--- a/src/src/Makefile.am
+++ b/src/src/Makefile.am
@@ -27,6 +27,7 @@ PLUGIN_FILES =				\
 	file.py				\
 	filesystem_associate.py		\
 	httpd_can_sendmail.py		\
+	httpd_unified.py		\
 	httpd_write_content.py		\
 	__init__.py			\
 	kernel_modules.py		\
